--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,16 @@ authors:
 - Faisal Abid <faisal.abid@gmail.com>
 - Ravi Teja Gudapati <tejainece@gmail.com>
 
-
 environment:
-  sdk: '>=1.11.0 <2.0.0'
+  sdk: '>=2.0.0-dev.64.0 <3.0.0'
 
 dependencies:
   collection: ^1.1.3
-  crypto: ">=0.9.2 <3.0.0"
-  logging: '>=0.11.1 <0.12.0'
+  crypto: ^2.0.6
+  logging: ^0.11.3
+  typed_buffer: ^2.1.1
 
 dev_dependencies:
-  mockito: '>=0.10.1 <0.11.0'
+  # mockito: '>=0.10.1 <0.11.0'
   options_file: '>=0.11.0 <0.12.0'
   test: '>=0.12.3+9 <0.13.0'
