--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sqljocky5
-version: 1.0.0
+version: 2.1.5
 description: MySQL driver for Dart
 documentation:
 homepage: https://github.com/dart-db/sqljocky5
@@ -18,6 +18,4 @@ dependencies:
   typed_buffer: ^2.1.1
 
 dev_dependencies:
-  # mockito: '>=0.10.1 <0.11.0'
-  options_file: '>=0.11.0 <0.12.0'
-  test: '>=0.12.3+9 <0.13.0'
+  test: ^1.3.0
