--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sqljocky5
-version: 2.1.5
+version: 2.2.0
 description: MySQL driver for Dart
 documentation:
 homepage: https://github.com/dart-db/sqljocky5
@@ -15,6 +15,7 @@ dependencies:
   collection: ^1.1.3
   crypto: ^2.0.6
   logging: ^0.11.3
+  pool: ^1.3.6
   typed_buffer: ^2.1.1
 
 dev_dependencies:
