--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ documentation:
 homepage: https://github.com/dart-db/sqljocky5
 
 authors:
-- James Ots <code@jamesots.com>
 - Ravi Teja Gudapati <tejainece@gmail.com>
+- James Ots <code@jamesots.com>
 
 environment:
   sdk: '>=2.0.0-dev.68.0 <3.0.0'
@@ -14,8 +14,7 @@ environment:
 dependencies:
   collection: ^1.1.3
   crypto: ^2.0.6
-  logging: ^0.11.3
-  pool: ^1.3.6
+  synchronized: ^1.5.1
   typed_buffer: ^2.1.1
 
 dev_dependencies:
