--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
   sdk: '>=2.0.0-dev.68.0 <3.0.0'
 
 dependencies:
+  async: ^2.0.8
   collection: ^1.1.3
   crypto: ^2.0.6
   synchronized: ^1.5.1
